--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,51 +1,24 @@
-header {
-  background: #3CBC8D;
-  color: white;
-  height: 80px;
-  display: flex;
-  width: 100%;
-  font-family: cursive;
-  font-size: 15px;
-  align-items: center;
-  justify-content: center;
+html, body {
+    height: 100%;
 }
 
-label {
-  margin: 20px;
-  font-size: 20px;
+body {
+    display: flex;
+    align-items: center;
+    padding-top: 60px;
+    padding-bottom: 100px;
 }
 
-input {
-  background-color: #3CBC8D;
-  width:200px;
-  padding: 10px;
-  margin-botton: 20px;
-  color: white;
-  border: 2px solid white;
+.centeredForm {
+    max-width: 330px;
+    padding: 15px;
 }
 
-footer {
-  background: #3CBC8D;
-  color: white;
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  height: 40px;
-  width: 100%;
-  display: flex;
-  font-weight: bold;
-  align-items: center;
-  justify-content: center;
+.clientList {
+    max-width: 500px;
+    padding: 15px;
 }
 
-button {
-  background-color: #3CBC8D;
-  border: none;
-  color: white;
-  padding: 15px 32px;
-  margin:15px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
+.nav {
+    background-color: #138496;
 }
