--- a/templates/index.html
+++ b/templates/index.html
@@ -1,21 +1,14 @@
-<!DOCTYPE html>
-{% load static %}
-<html lang="pt-br">
-	<head>
-		<meta charset="utf-8">
-		<link href="{% static "css/style.css" %}" rel="stylesheet">
-		<link href="{% static "css/bootstrap.min.css" %}" rel="stylesheet">
-		<title>Home</title>
-	</head>
-	<body>
-		<div align="right">
-			<a href="/logout">logout</a>
-		</div>
-		
-		<div align="center">
-			<a href="clientes/"> <button type="button">CADASTRAR</button> </a>
-			<br>
-			<a href="client_list"> <button type="button">VER LISTA</button> </a>
-		</div>
-	</body>
-</html>
+{% extends "modelPage.html" %}
+
+{% block content %}
+<main class="centeredForm w-100 m-auto">
+    <a href="client/register/">
+        <button type="button" class="w-100 btn btn-info mb-3">Cadastrar Clientes</button>
+    </a>
+    <a href="client/list">
+        <button type="button" class="w-100 btn btn-dark">Consultar Clientes</button>
+    </a>
+</main>
+
+
+{% endblock %}
